apps/services/catalog-bff/provisioning/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: catalog
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: wapps
